--- a/_includes/onepage_head.html
+++ b/_includes/onepage_head.html
@@ -4,7 +4,7 @@
 	<!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<!-- Page Title -->
-    <title>Themefisher.Free Bootstrap3 based HTML5 Templates</title>		
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>		
 	<!-- Meta Description -->
     <meta name="description" content="Blue One Page Creative HTML5 Template">
     <meta name="keywords" content="one page, single page, onepage, responsive, parallax, creative, business, html5, css3, css3 animation">
