updated sagamore to version 0.0.1

--- a/_includes/revelance_footer.html
+++ b/_includes/revelance_footer.html
@@ -3,12 +3,8 @@
         <a href="#" id="abdev_back_to_top" title="Back to top">
             <i class="entypo-arrow-up7"></i>
         </a>
-
-        <div id="footer_punchline">
-            Made with <i class="entypo-heart"></i> in London
-        </div>
         <div id="footer_copyright">
-            © Copyright 2014 Revelance. All rights reserved.
+            ©Sagamore 2015. All rights reserved.
         </div>
     </div>
 </footer>
