--- a/_includes/revelance_header.html
+++ b/_includes/revelance_header.html
@@ -1,66 +1,18 @@
 <header id="abdev_main_header" class="clearfix">
     <div class="container">
         <div id="logo">
-            <a href="index.html">
-                <img id="main_logo" src="images/logo.png" alt="Revelance">
-                <img id="inversed_logo" src="images/logo2.png" alt="Revelance">
+            <a href="#">
+                <img id="main_logo" src="images/logo.png" alt="Sagamore">
+                <img id="inversed_logo" src="images/logo2.png" alt="Sagamore">
             </a>
         </div>
         <nav>
-            <a class="menu_social menu_social_facebook" href="#" target="_blank" title="Follow us on Facebook"><i
-                    class="entypo-facebook"></i></a>
-            <a class="menu_social menu_social_twitter" href="#" target="_blank" title="Follow us on Twitter"><i
-                    class="entypo-twitter"></i></a>
-            <a class="menu_social menu_social_googleplus" href="#" target="_blank" title="Follow us on Google+"><i
-                    class="entypo-googleplus"></i></a>
-
             <ul id="main_menu">
-                <li class="current-menu-item">
-                    <a href="index.html">Home</a>
-                    <ul>
-                        <li><a href="index.html">Homepage Layout 1</a></li>
-                        <li><a href="index-2.html">Homepage Layout 2</a></li>
-                        <li><a href="index.html">Parallax Slider</a></li>
-                        <li><a href="index-ken_burns_slider.html">Ken Burns Slider</a></li>
-                        <li><a href="index-vertical_slider.html">Vertical Slider</a></li>
-                        <li><a href="index-video_slider.html">Video Slider</a></li>
-                        <li><a href="index-preloader.html">Home With Preloader</a></li>
-                    </ul>
-                </li>
-                <li><a href="index.html#about" class="scroll">About</a></li>
-                <li><a href="index.html#our_team" class="scroll">Our Team</a></li>
-                <li><a href="index.html#work" class="scroll">Work</a></li>
-                <li><a href="index.html#pricing" class="scroll">Pricing</a></li>
-                <li><a href="index.html#services" class="scroll">Services</a></li>
-                <li>
-                    <a href="blog-right-sidebar.html">Blog</a>
-                    <ul>
-                        <li><a href="blog-right-sidebar.html">Right Sidebar Blog</a></li>
-                        <li><a href="blog-fullwidth.html">Fullwidth Blog</a></li>
-                        <li><a href="blog-left-sidebar.html">Left Sidebar Blog</a></li>
-                        <li><a href="blog-masonry-3-columns.html">Masonry 3 Columns</a></li>
-                        <li><a href="blog-masonry-4-columns.html">Masonry 4 Columns</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Features</a>
-                    <ul>
-                        <li><a href="elements.html">Elements</a></li>
-                        <li><a href="#">Third Menu Level</a>
-                            <ul>
-                                <li><a href="#">Dummy Item</a></li>
-                                <li><a href="#">Dummy Item</a></li>
-                                <li><a href="#">Dummy Item</a></li>
-                                <li><a href="#">Dummy Item</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="404.html">404 Page</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="page-fullwidth.html">Page – Fullwidth</a></li>
-                        <li><a href="page-left-sidebar.html">Page – Left Sidebar</a></li>
-                        <li><a href="page-right-sidebar.html">Page – Right Sidebar</a></li>
-                    </ul>
-                </li>
-                <li><a href="index.html#contact" class="scroll">Contact</a></li>
+                <li><a href="#fund_investments" class="scroll">Fund Investments</a></li>
+                <li><a href="#direct_investments" class="scroll">Direct Investments</a></li>
+                <li><a href="#history" class="scroll">History</a></li>
+                <li><a href="#team" class="scroll">Team</a></li>
+                <li><a href="#contact" class="scroll">Contact</a></li>
             </ul>
         </nav>
         <div id="ABdev_menu_toggle"><i class="entypo-list2"></i></div>
