--- a/css/revelance/settings.css
+++ b/css/revelance/settings.css
@@ -50,7 +50,7 @@ text-shadow:none;
 font-size:60px;
 line-height:60px;
 font-weight:300;
-font-family:"Open Sans", sans-serif;
+font-family:"Optima LT Std Roman", sans-serif;
 background-color:transparent;
 text-decoration:none;
 text-transform:uppercase;
@@ -81,7 +81,7 @@ text-shadow:none;
 font-size:37px;
 line-height:37px;
 font-weight:300;
-font-family:"Open Sans", sans-serif;
+font-family:"Optima LT Std Roman", sans-serif;
 background-color:transparent;
 text-decoration:none;
 text-transform:uppercase;
@@ -95,7 +95,7 @@ border-style:none;
 font-size:25px;
 line-height:25px;
 font-weight:800;
-font-family:"Open Sans", sans-serif;
+font-family:"Optima LT Std Roman", sans-serif;
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -128,7 +128,7 @@ text-shadow:none;
 font-size:25px;
 line-height:25px;
 font-weight:300;
-font-family:"Open Sans", sans-serif;
+font-family:"Optima LT Std Roman", sans-serif;
 background-color:transparent;
 text-decoration:none;
 text-transform:uppercase;
@@ -142,7 +142,7 @@ border-style:none;
 font-size:13px;
 line-height:25px;
 font-weight:400;
-font-family:"Open Sans", sans-serif;
+font-family:"Optima LT Std Roman", sans-serif;
 color:#ffffff;
 text-decoration:none;
 background-color:transparent;
@@ -175,7 +175,7 @@ text-shadow: none;
 font-size: 60px;
 line-height: 60px;
 font-weight: 300;
-font-family: "Open Sans", sans-serif;
+font-family: "Optima LT Std Roman", sans-serif;
 background-color: rgba(0, 0, 0, 0);
 text-decoration: none;
 text-transform: uppercase;
@@ -191,7 +191,7 @@ text-shadow: none;
 font-size: 34px;
 line-height: 34px;
 font-weight: 300;
-font-family: "Open Sans", sans-serif;
+font-family: "Optima LT Std Roman", sans-serif;
 background-color: rgba(0, 0, 0, 0);
 text-decoration: none;
 text-transform: uppercase;
@@ -222,7 +222,7 @@ color:rgb(251,213,114);
 font-weight:600;
 font-size:50px;
 line-height:50px;
-font-family: 'Open Sans', sans-serif;
+font-family: 'Optima LT Std Roman', sans-serif;
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -235,7 +235,7 @@ color:rgb(251,213,114);
 font-weight:300;
 font-size:90px;
 line-height:90px;
-font-family: 'Open Sans', sans-serif;
+font-family: 'Optima LT Std Roman', sans-serif;
 margin:0px;
 letter-spacing: 20px;
 border-width:0px;
@@ -249,7 +249,7 @@ color:#333;
 font-weight:700;
 font-size:70px;
 line-height:70px;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -262,7 +262,7 @@ color:#333;
 font-weight:300;
 font-size:40px;
 line-height:40px;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 margin:0px;
 letter-spacing: 5px;
 border-width:0px;
@@ -320,7 +320,7 @@ white-space:nowrap;
 font-size:55px;
 line-height:65px;
 font-weight:700;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:#fff;
 text-decoration:none;
 background-color:transparent;
@@ -335,7 +335,7 @@ border-style:none;
 font-size:25px;
 line-height:25px;
 font-weight:600;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:#fff;
 text-decoration:none;
 background-color:transparent;
@@ -364,7 +364,7 @@ white-space:nowrap;
 font-size:30px;
 line-height:30px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(102, 102, 102);
 text-decoration:none;
 background-color:transparent;
@@ -432,7 +432,7 @@ text-shadow:none;
 font-weight:800;
 font-size:24px;
 line-height:20px;
-font-family:"Open Sans", sans-serif;
+font-family:"Optima LT Std Roman", sans-serif;
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -446,7 +446,7 @@ text-shadow:none;
 font-weight:800;
 font-size:24px;
 line-height:20px;
-font-family:"Open Sans", sans-serif;
+font-family:"Optima LT Std Roman", sans-serif;
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -460,7 +460,7 @@ text-shadow:none;
 font-weight:300;
 font-size:24px;
 line-height:20px;
-font-family:"Open Sans", sans-serif;
+font-family:"Optima LT Std Roman", sans-serif;
 margin:0px;
 border-width:0px;
 border-style:none;
@@ -474,7 +474,7 @@ text-shadow:none;
 font-weight:800;
 font-size:30px;
 line-height:36px;
-font-family:"Open Sans", sans-serif;
+font-family:"Optima LT Std Roman", sans-serif;
 padding:3px 10px;
 margin:0px;
 border-width:0px;
@@ -490,7 +490,7 @@ text-shadow:none;
 font-weight:300;
 font-size:30px;
 line-height:36px;
-font-family:"Open Sans", sans-serif;
+font-family:"Optima LT Std Roman", sans-serif;
 padding:3px 10px;
 padding-top:1px;
 margin:0px;
@@ -548,7 +548,7 @@ text-shadow:none;
 font-weight:300;
 font-size:30px;
 line-height:30px;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 background-color:transparent;
 }
 
@@ -559,7 +559,7 @@ text-shadow:none;
 font-weight:300;
 font-size:16px;
 line-height:26px;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 background-color:transparent;
 }
 
@@ -577,7 +577,7 @@ background-color:transparent;
 font-size:30px;
 line-height:75px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(0, 0, 0);
@@ -594,7 +594,7 @@ border-style:none;
 font-size:50px;
 line-height:70px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(0, 0, 0);
@@ -612,7 +612,7 @@ text-shadow:none;
 font-weight:300;
 font-size:50px;
 line-height:70px;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 background-color:#db4360;
 padding:0px 20px;
 -webkit-border-radius:0px;
@@ -627,7 +627,7 @@ text-shadow:none;
 font-weight:300;
 font-size:50px;
 line-height:70px;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 background-color:#fff;
 padding:0px 20px;
 -webkit-border-radius:0px;
@@ -642,7 +642,7 @@ text-shadow:none;
 font-weight:300;
 font-size:50px;
 line-height:70px;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 background-color:#67ae73;
 padding:0px 20px;
 -webkit-border-radius:0px;
@@ -674,7 +674,7 @@ border-style:none;
 font-size:60px;
 line-height:60px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(102, 102, 102);
 text-decoration:none;
 background-color:transparent;
@@ -690,7 +690,7 @@ border-style:none;
 font-size:34px;
 line-height:30px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(102, 102, 102);
 text-decoration:none;
 background-color:transparent;
@@ -706,7 +706,7 @@ border-style:none;
 font-size:18px;
 line-height:26px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(117, 117, 117);
 text-decoration:none;
 background-color:transparent;
@@ -734,7 +734,7 @@ border-style:none;
 font-size:58px;
 line-height:60px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(52, 73, 94);
 text-decoration:none;
 background-color:transparent;
@@ -747,7 +747,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(52, 73, 94);
@@ -761,7 +761,7 @@ border-style:none;
 font-size:24px;
 line-height:30px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(227, 58, 12);
 text-decoration:none;
 background-color:transparent;
@@ -775,7 +775,7 @@ border-style:none;
 font-size:21px;
 line-height:26px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(227, 58, 12);
 text-decoration:none;
 background-color:transparent;
@@ -789,7 +789,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(227, 58, 12);
@@ -803,7 +803,7 @@ border-style:none;
 font-size:24px;
 line-height:30px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(243, 156, 18);
 text-decoration:none;
 background-color:transparent;
@@ -816,7 +816,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(243, 156, 18);
@@ -840,7 +840,7 @@ border-style:none;
 font-size:58px;
 line-height:60px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -853,7 +853,7 @@ border-style:none;
 font-size:30px;
 line-height:36px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -867,7 +867,7 @@ border-style:none;
 font-size:34px;
 line-height:40px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -881,7 +881,7 @@ border-style:none;
 font-size:34px;
 line-height:40px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:#ffffff;
 text-decoration:none;
 background-color:transparent;
@@ -896,7 +896,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(127, 140, 141);
@@ -910,7 +910,7 @@ border-style:none;
 font-size:30px;
 line-height:36px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(0, 0, 0);
 text-decoration:none;
 background-color:transparent;
@@ -924,7 +924,7 @@ border-style:none;
 font-size:58px;
 line-height:60px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(0, 0, 0);
 text-decoration:none;
 background-color:transparent;
@@ -937,7 +937,7 @@ border-style:none;
 font-size:34px;
 line-height:40px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(52, 73, 94);
 text-decoration:none;
 background-color:transparent;
@@ -951,7 +951,7 @@ border-style:none;
 font-size:17px;
 line-height:28px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:transparent;
@@ -971,7 +971,7 @@ border-style:none;
 font-size:40px;
 line-height:40px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(0, 0, 0);
@@ -985,7 +985,7 @@ border-style:none;
 font-size:30px;
 line-height:30px;
 font-weight:300;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(0, 0, 0);
 text-decoration:none;
 background-color:rgb(255, 255, 255);
@@ -1000,7 +1000,7 @@ border-style:none;
 font-size:20px;
 line-height:20px;
 font-weight:800;
-font-family:"Open Sans";
+font-family:"Optima LT Std Roman";
 color:rgb(255, 255, 255);
 text-decoration:none;
 background-color:rgb(243, 156, 18);
@@ -1024,7 +1024,7 @@ border-style:none;
 		font-weight: 300;
 		font-size: 19px;
 		line-height: 19px;
-		font-family: 'Open Sans', sans;
+		font-family: 'Optima LT Std Roman', sans;
 	}
 
 .tp-caption.noshadow {
