made sagamore as index page

--- a/_layouts/sagamore.html
+++ b/_layouts/sagamore.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
-{% include revelance_head.html %}
+{% include sagamore_head.html %}
 
 <body>
 
@@ -11,7 +11,7 @@
 <!--
 Fixed Navigation
 ==================================== -->
-{% include revelance_header.html %}
+{% include sagamore_header.html %}
 
 <!--
 End Fixed Navigation
@@ -21,7 +21,7 @@ End Fixed Navigation
 {{ content }}
 
 
-{% include revelance_footer.html %}
+{% include sagamore_footer.html %}
 
 </body>
 </html>
