updated title and description to sagamore

--- a/_includes/sagamore_head.html
+++ b/_includes/sagamore_head.html
@@ -1,7 +1,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Revelance - Home Page</title>
-    <meta name="description" content="Revelance HTML5 premium template">
+    <title>Sagamore - Home Page</title>
+    <meta name="description" content="Sagamore HTML5 premium template">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
     <!--[if lt IE 9]>
